joos1syntax/test/pos/SimpleIf1.java
public class SimpleIf1 {
  public SimpleIf1() {
    if (true) {}
  }
}
