joos1syntax/test/neg/BadIf3.java
public class BadIf3 {
  public BadIf3() {
    if (true)
  }
}
